samples/_failures_safe/1761506893_e3959b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bc19d27.c: In function ‘main’:
./samples/SAFE/__tmp_2bc19d27.c:169:5: error: expected declaration or statement at end of input
  169 |     int token_count;
      |     ^~~
